trunk/Archive2/18/1b059d3bb7cc56/output
main.cpp: In function 'int main()':
main.cpp:22:66: error: '>>' should be '> >' within a nested template argument list
     vector<accumulator_set<double, stats<tag::mean, tag::variance>>> acc;
                                                                  ^
main.cpp:30:13: warning: 'auto' changes meaning in C++11; please remove it [-Wc++0x-compat]
             auto f(line.begin()), l(line.end());
             ^
main.cpp:30:20: error: ISO C++ forbids declaration of 'f' with no type [-fpermissive]
             auto f(line.begin()), l(line.end());
                    ^
main.cpp:30:32: error: cannot convert 'std::basic_string<char>::iterator {aka __gnu_cxx::__normal_iterator<char*, std::basic_string<char> >}' to 'int' in initialization
             auto f(line.begin()), l(line.end());
                                ^
main.cpp:30:37: error: ISO C++ forbids declaration of 'l' with no type [-fpermissive]
             auto f(line.begin()), l(line.end());
                                     ^
main.cpp:30:47: error: cannot convert 'std::basic_string<char>::iterator {aka __gnu_cxx::__normal_iterator<char*, std::basic_string<char> >}' to 'int' in initialization
             auto f(line.begin()), l(line.end());
                                               ^
main.cpp:34:17: warning: 'auto' changes meaning in C++11; please remove it [-Wc++0x-compat]
                 auto accit=acc.begin();
                 ^
main.cpp:34:22: error: 'accit' does not name a type
                 auto accit=acc.begin();
                      ^
main.cpp:35:22: warning: 'auto' changes meaning in C++11; please remove it [-Wc++0x-compat]
                 for (auto v : values)
                      ^
main.cpp:35:27: error: 'v' does not name a type
                 for (auto v : values)
                           ^
main.cpp:37:13: error: expected ';' before '}' token
             } else
             ^
main.cpp:37:13: error: expected primary-expression before '}' token
main.cpp:37:13: error: expected ';' before '}' token
main.cpp:37:13: error: expected primary-expression before '}' token
main.cpp:37:13: error: expected ')' before '}' token
main.cpp:37:13: error: expected primary-expression before '}' token
In file included from /usr/local/include/c++/4.9.0/bits/stl_algobase.h:65:0,
                 from /usr/local/include/c++/4.9.0/bits/char_traits.h:39,
                 from /usr/local/include/c++/4.9.0/ios:40,
                 from /usr/local/include/c++/4.9.0/istream:38,
                 from /usr/local/include/c++/4.9.0/fstream:38,
                 from main.cpp:1:
/usr/local/include/c++/4.9.0/bits/stl_iterator_base_types.h: In instantiation of 'struct std::iterator_traits<int>':
/usr/local/include/boost/concept_check.hpp:507:71:   required from 'struct boost::InputIterator<int>'
/usr/local/include/boost/concept_check.hpp:541:3:   required from 'struct boost::ForwardIterator<int>'
/usr/local/include/boost/concept/detail/has_constraints.hpp:32:62:   required by substitution of 'template<class Model> boost::concepts::detail::yes boost::concepts::detail::has_constraints_(Model*, boost::concepts::detail::wrap_constraints<Model, (& Model:: constraints)>*) [with Model = boost::ForwardIterator<int>]'
/usr/local/include/boost/concept/detail/has_constraints.hpp:42:5:   required from 'const bool boost::concepts::not_satisfied<boost::ForwardIterator<int> >::value'
/usr/local/include/boost/concept/detail/has_constraints.hpp:45:31:   required from 'struct boost::concepts::not_satisfied<boost::ForwardIterator<int> >'
/usr/local/include/boost/mpl/if.hpp:67:11:   required from 'struct boost::mpl::if_<boost::concepts::not_satisfied<boost::ForwardIterator<int> >, boost::concepts::constraint<boost::ForwardIterator<int> >, boost::concepts::requirement<boost::concepts::failed************ boost::ForwardIterator<int>::************> >'
/usr/local/include/boost/concept/detail/general.hpp:50:8:   required from 'struct boost::concepts::requirement_<void (*)(boost::ForwardIterator<int>)>'
/usr/local/include/boost/spirit/home/qi/parse.hpp:34:9:   required from 'bool boost::spirit::qi::phrase_parse(Iterator&, Iterator, const Expr&, const Skipper&, boost::spirit::qi::skip_flag::enum_type, Attr&) [with Iterator = int; Expr = boost::proto::exprns_::expr<boost::proto::tagns_::tag::modulus, boost::proto::argsns_::list2<const boost::spirit::terminal<boost::spirit::tag::auto_>&, boost::proto::exprns_::expr<boost::proto::tagns_::tag::terminal, boost::proto::argsns_::term<const char&>, 0l> >, 2l>; Skipper = boost::proto::exprns_::expr<boost::proto::tagns_::tag::terminal, boost::proto::argsns_::term<boost::spirit::tag::char_code<boost::spirit::tag::space, boost::spirit::char_encoding::standard> >, 0l>; Attr = std::vector<double>]'
/usr/local/include/boost/spirit/home/qi/parse.hpp:197:86:   required from 'bool boost::spirit::qi::phrase_parse(Iterator&, Iterator, const Expr&, const Skipper&, Attr&) [with Iterator = int; Expr = boost::proto::exprns_::expr<boost::proto::tagns_::tag::modulus, boost::proto::argsns_::list2<const boost::spirit::terminal<boost::spirit::tag::auto_>&, boost::proto::exprns_::expr<boost::proto::tagns_::tag::terminal, boost::proto::argsns_::term<const char&>, 0l> >, 2l>; Skipper = boost::proto::exprns_::expr<boost::proto::tagns_::tag::terminal, boost::proto::argsns_::term<boost::spirit::tag::char_code<boost::spirit::tag::space, boost::spirit::char_encoding::standard> >, 0l>; Attr = std::vector<double>]'
main.cpp:31:70:   required from here
/usr/local/include/c++/4.9.0/bits/stl_iterator_base_types.h:165:53: error: 'int' is not a class, struct, or union type
       typedef typename _Iterator::iterator_category iterator_category;
                                                     ^
/usr/local/include/c++/4.9.0/bits/stl_iterator_base_types.h:166:53: error: 'int' is not a class, struct, or union type
       typedef typename _Iterator::value_type        value_type;
                                                     ^
/usr/local/include/c++/4.9.0/bits/stl_iterator_base_types.h:167:53: error: 'int' is not a class, struct, or union type
       typedef typename _Iterator::difference_type   difference_type;
                                                     ^
/usr/local/include/c++/4.9.0/bits/stl_iterator_base_types.h:168:53: error: 'int' is not a class, struct, or union type
       typedef typename _Iterator::pointer           pointer;
                                                     ^
/usr/local/include/c++/4.9.0/bits/stl_iterator_base_types.h:169:53: error: 'int' is not a class, struct, or union type
       typedef typename _Iterator::reference         reference;
                                                     ^
